--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,16 @@
         <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
+    <dependencies>
+
+        <!-- test dependencies-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
 </project>
